--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=templates-proxy
-groupId=com.gf.microservices.utilities.templates
+artifactId=calculations-lib
+groupId=com.gf.microservices.utilities.calculations
 version=4.0
