--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=calculations-proxy
-groupId=com.gf.microservices.utilities.calculations
+artifactId=reports-lib
+groupId=com.gf.microservices.utilities.reports
 version=4.0
