--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=reports-proxy
-groupId=com.gf.microservices.utilities.reports
+artifactId=organization-lib
+groupId=com.gf.microservices.gf-tms.organization
 version=4.0
