Maven artifacts for com.gf.microservices.gf-tms.project:project-lib:jar:4.0

--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=organization-proxy
-groupId=com.gf.microservices.gf-tms.organization
+artifactId=project-lib
+groupId=com.gf.microservices.gf-tms.project
 version=4.0
