--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=project-proxy
-groupId=com.gf.microservices.gf-tms.project
+artifactId=testcases-lib
+groupId=com.gf.microservices.gf-tms.testcases
 version=4.0
