--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=testcases-proxy
-groupId=com.gf.microservices.gf-tms.testcases
+artifactId=roles-lib
+groupId=com.gf.microservices.uegonzaga.roles
 version=4.0
