--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=roles-proxy
-groupId=com.gf.microservices.uegonzaga.roles
+artifactId=staff-lib
+groupId=com.gf.microservices.uegonzaga.staff
 version=4.0
