--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=staff-proxy
-groupId=com.gf.microservices.uegonzaga.staff
+artifactId=plan-lib
+groupId=com.gf.microservices.uegonzaga.plan
 version=4.0
