--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=evaluations-proxy
-groupId=com.gf.microservices.uegonzaga.evaluations
+artifactId=i18n-lib
+groupId=com.gf.microservices.utilities.i18n
 version=4.0
