Maven artifacts for com.gf.microservices.utilities.templates:templates-lib:jar:4.1

--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=i18n-proxy
-groupId=com.gf.microservices.utilities.i18n
+artifactId=templates-lib
+groupId=com.gf.microservices.utilities.templates
 version=4.1
