--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=plan-proxy
-groupId=com.gf.microservices.uegonzaga.plan
+artifactId=evaluations-lib
+groupId=com.gf.microservices.uegonzaga.evaluations
 version=4.1
