--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=evaluations-proxy
-groupId=com.gf.microservices.uegonzaga.evaluations
+artifactId=util-lib
+groupId=com.gf.gf-libs
 version=4.1
