--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=evaluations-proxy
-groupId=com.gf.microservices.uegonzaga.evaluations
+artifactId=gf-proxy-starter
+groupId=com.gf
 version=4.1
