--- a/maven-archiver/pom.properties
+++ b/maven-archiver/pom.properties
@@ -1,3 +1,3 @@
-artifactId=reports-proxy
-groupId=com.gf.microservices.utilities.reports
+artifactId=roles-lib
+groupId=com.gf.microservices.uegonzaga.roles
 version=4.1
